discussion/kv_engine/188036/188036_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Add support for lambda config change listeners

Allows users interested in a config param changing to define listeners
as a lambda.

Previously, a subclass of ValueChangedListener was required. As a
result of this verbosity, a single listener type is often used to
handle changes in several config keys, even though an instance per key
must be constructed anyway (managed by unique_ptrs).

For greater convenience, add `addValueChangedCallback` taking a
templated Callable. This permits lambdas to be used.

Note, as the provided lambda is currently stored in an std::function,
generic lambdas cannot be used. As a given lambda is likely only
associated with a single key (and thus needs only handle a single type)
this is acceptable for now.

Change-Id: I4f8b3d2acecc9cae95e17efa6054922c2cc51a78

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2023-03-14 13:39:08.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-14 13:50:16.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52379/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\configuration_test.cc(365): error C2672: "Configuration::addValueChangedCallback": no matching overloaded function found ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52379/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22924/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/configuration_test.cc:365:19: error: no matching member function for call to "addValueChangedCallback" [clang-diagnostic-error]
    configuration.addValueChangedCallback(
                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/configuration.h:240:10: note: candidate template ignored: could not match "function<void (type-parameter-0-0)>" against "(lambda at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/configuration_test.cc:366:18)"
    void addValueChangedCallback(const std::string& key,
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22924/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/configuration_test.cc:365:19:
error: no matching member function for call to "addValueChangedCallback" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22924/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12737/ : FAILURE

Compile error at [2023-03-14T13:46:45.824Z] ../kv_engine/engines/ep/tests/module_tests/configuration_test.cc:366:56:
error: no matching function for call to ?ConfigurationShim::addValueChangedCallback(std::string&, ChangeListenerTest_Callback_Test::TestBody()::<lambda(bool)>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12737/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12656/ : FAILURE

Compile error at [2023-03-14T13:45:28.790Z] ../kv_engine/engines/ep/tests/module_tests/configuration_test.cc:365:19:
error: no matching member function for call to "addValueChangedCallback"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12656/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26303/ : FAILURE

Compile error at [2023-03-14T13:42:08.099Z] ../kv_engine/engines/ep/tests/module_tests/configuration_test.cc:365:19:
error: no matching member function for call to "addValueChangedCallback"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26303/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24988/ : FAILURE

Compile error at [2023-03-14T13:43:44.898Z] ../kv_engine/engines/ep/tests/module_tests/configuration_test.cc:366:56:
error: no matching function for call to ?ConfigurationShim::addValueChangedCallback(std::string&, ChangeListenerTest_Callback_Test::TestBody()::<lambda(bool)>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24988/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25447/ : FAILURE

Compile error at [2023-03-14T13:43:31.016Z] ../kv_engine/engines/ep/tests/module_tests/configuration_test.cc:366:56:
error: no matching function for call to ?ConfigurationShim::addValueChangedCallback(std::string&, ChangeListenerTest_Callback_Test::TestBody()::<lambda(bool)>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25447/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33405/ : FAILURE

Compile error at [2023-03-14T13:43:34.139Z] ../kv_engine/engines/ep/tests/module_tests/configuration_test.cc:365:19:
error: no matching member function for call to "addValueChangedCallback"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33405/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24569/ : FAILURE

Compile error at [2023-03-14T13:46:30.462Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/engines/ep/tests/module_tests/configuration_test.cc:365:19:
error: no matching member function for call to "addValueChangedCallback"
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24569/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1729/ : FAILURE

Compile error at [2023-03-14T13:41:53.356Z] ../kv_engine/engines/ep/tests/module_tests/configuration_test.cc:366:56:
error: no matching function for call to ?ConfigurationShim::addValueChangedCallback(std::string&, ChangeListenerTest_Callback_Test::TestBody()::<lambda(bool)>)?
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1729/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23182/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43939/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
